gaming-api/genesis-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genesis-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: genesis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: genesis-service
                port:
                  number: 80
